--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,8 +20,10 @@
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.561.0",
     "motion": "^12.23.26",
-    "react": "^19.2.0",
+    "react": "^19.2.3",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.11.0",
+    "router-dom": "^3.0.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18"
   },
